cmake_minimum_required(VERSION 3.20)

project(FBroCppSuite LANGUAGES CXX)

add_subdirectory(NativeFBroDemo)
add_subdirectory(BaiduFormFill)
add_subdirectory("同步辅助类")
add_subdirectory("Cookie设置取出")
add_subdirectory("服务器")
add_subdirectory("服务器Web")
add_subdirectory("创建URL请求")
add_subdirectory("JS交互")
add_subdirectory("拦截获取简单示例")
add_subdirectory("篡改资源实例")
